Added libraries (mem, cudaaux, aux)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,11 @@ set(CMAKE_MODULE_PATH ${ROOT_DIR}/cmake)
 set(EXECUTABLE_OUTPUT_PATH ../../bin)
 set(LIBRARY_OUTPUT_PATH ../../bin)
 
+
 # Compiler options
 set(CMAKE_CXX_FLAGS_RELEASE "-Wall -pedantic -O3")
 set(CMAKE_EXE_LINKER_FLAGS_RELEASE "-Wall -pedantic -O3")
+
 
 # Set Doxygen
 set(DOXYFILE_OUTPUT_DIR "doc")
@@ -20,7 +22,21 @@ else (DOXYGEN_FOUND)
   message("DOXYGEN not found")
 endif (DOXYGEN_FOUND)
 
+
+# Set CUDA
+set(CUDA_NVCC_FLAGS "-O3;")
+find_package(CUDA)
+
+if (CUDA_FOUND)
+  message("CUDA found")
+  add_definitions(-DCUDA)
+  set(DOXYFILE_PREDEFINED "CUDA")
+else (CUDA_FOUND)
+  message("CUDA not found")
+endif (CUDA_FOUND)
+
+
 # Set subdirectories
-#add_subdirectory(lib)
+add_subdirectory(lib)
 add_subdirectory(exe)
 
