Moved the bytebuffer to aux library and added a test (not using ctest for the moment)

--- a/lib/aux/CMakeLists.txt
+++ b/lib/aux/CMakeLists.txt
@@ -5,8 +5,13 @@ project(aux)
 include_directories(include)
 
 # Add library
-if (CUDA_FOUND)
-  add_library(aux
-    src/trie.cpp
-    src/processor.cpp)
-endif (CUDA_FOUND)
+add_library(aux
+  src/trie.cpp
+  src/processor.cpp
+  src/bytebuffer.cpp)
+
+# Add test
+add_executable(test_bytebuffer
+  test/test_bytebuffer.cpp)
+target_link_libraries(test_bytebuffer
+  aux)
