Improved the Trie with atlas and test program

--- a/lib/aux/CMakeLists.txt
+++ b/lib/aux/CMakeLists.txt
@@ -17,3 +17,11 @@ target_link_libraries(test_bytebuffer
   aux)
 add_test(test_bytebuffer
   ${EXECUTABLE_OUTPUT_PATH}/test_bytebuffer)
+  
+# Add test
+add_executable(test_trie
+  test/test_trie.cpp)
+target_link_libraries(test_trie
+  aux)
+add_test(test_trie
+  ${EXECUTABLE_OUTPUT_PATH}/test_trie)
